<?xml version="1.0"?>
<package>
  <name>handle_detection_test</name>
  <version>0.0.0</version>
  <description>The handle_detection_test package</description>
  <maintainer email="coky@todo.todo">coky</maintainer>
  <license>Apache2</license>
  <author email="email@domain.com">Jane Doe</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>


  <export>
  </export>
</package>
